Fix grid on tablet. Maybe its too complicated. Improve grid tests

--- a/destrap.css
+++ b/destrap.css
@@ -232,40 +232,106 @@ h1, h2, h3, h4, h5, h6,
 
 @media (max-width: 767px) {
   .col-1 {
-    width: 25%; }
+    width: 33.33333%; }
 
   .col-2 {
-    width: 50%; }
+    width: 100%;
+    *zoom: 1; }
+    .col-2:before, .col-2:after {
+      content: "";
+      display: table; }
+    .col-2:after {
+      clear: both; }
 
   .col-3 {
-    width: 75%; }
+    width: 100%;
+    *zoom: 1; }
+    .col-3:before, .col-3:after {
+      content: "";
+      display: table; }
+    .col-3:after {
+      clear: both; }
 
   .col-4 {
-    width: 100%; }
+    width: 100%;
+    *zoom: 1; }
+    .col-4:before, .col-4:after {
+      content: "";
+      display: table; }
+    .col-4:after {
+      clear: both; }
 
   .col-5 {
-    width: 25%; }
+    width: 100%;
+    *zoom: 1; }
+    .col-5:before, .col-5:after {
+      content: "";
+      display: table; }
+    .col-5:after {
+      clear: both; }
 
   .col-6 {
-    width: 50%; }
+    width: 100%;
+    *zoom: 1; }
+    .col-6:before, .col-6:after {
+      content: "";
+      display: table; }
+    .col-6:after {
+      clear: both; }
 
   .col-7 {
-    width: 75%; }
+    width: 100%;
+    *zoom: 1; }
+    .col-7:before, .col-7:after {
+      content: "";
+      display: table; }
+    .col-7:after {
+      clear: both; }
 
   .col-8 {
-    width: 100%; }
+    width: 100%;
+    *zoom: 1; }
+    .col-8:before, .col-8:after {
+      content: "";
+      display: table; }
+    .col-8:after {
+      clear: both; }
 
   .col-9 {
-    width: 25%; }
+    width: 100%;
+    *zoom: 1; }
+    .col-9:before, .col-9:after {
+      content: "";
+      display: table; }
+    .col-9:after {
+      clear: both; }
 
   .col-10 {
-    width: 50%; }
+    width: 100%;
+    *zoom: 1; }
+    .col-10:before, .col-10:after {
+      content: "";
+      display: table; }
+    .col-10:after {
+      clear: both; }
 
   .col-11 {
-    width: 75%; }
+    width: 100%;
+    *zoom: 1; }
+    .col-11:before, .col-11:after {
+      content: "";
+      display: table; }
+    .col-11:after {
+      clear: both; }
 
   .col-12 {
-    width: 100%; } }
+    width: 100%;
+    *zoom: 1; }
+    .col-12:before, .col-12:after {
+      content: "";
+      display: table; }
+    .col-12:after {
+      clear: both; } }
 @media (min-width: 768px) and (max-width: 1023px) {
   .col-1 {
     width: 16.66667%; }
@@ -338,6 +404,28 @@ h1, h2, h3, h4, h5, h6,
 
   .col-12 {
     width: 100%; } }
+.container {
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 1%;
+  padding-right: 1%;
+  *zoom: 1; }
+  .container:before, .container:after {
+    content: "";
+    display: table; }
+  .container:after {
+    clear: both; }
+
+.row {
+  margin-left: -1%;
+  margin-right: -1%;
+  *zoom: 1; }
+  .row:before, .row:after {
+    content: "";
+    display: table; }
+  .row:after {
+    clear: both; }
+
 /*
  * Utilities
  *
